tests/NormalTests/paczka1/fuzzy1/43354628.err
Error in line 3: mPqATdS A811 88,5
Error in line 2: eyfq1U9RwrH A811 72,7
Error in line 9: eyfq1U9RwrH A178 83,1
Error in line 6: mPqATdS S312 74,9
Error in line 22: EOK A992 32,3
Error in line 29: DVj A992 37,8
Error in line 35: DVj S312 90,6
